<?xml version="1.0"?>
<package format="2">
  <name>tb3_motion</name>
  <version>0.0.0</version>
  <description>
    TB3 detect lane, control, and 2 task node (Intersection, Construction)
  </description>

  <maintainer email="ychuang04@gmail.com">ethan</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>


</package>